<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:layout_margin="0dp"

    tools:context=".RegisterActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/footer"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="15dp"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="145dp"

        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/bg"
            app:srcCompat="@drawable/regbg" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Form"
        android:layout_width="376dp"
        android:layout_height="336dp"
        android:layout_below="@id/img"
        android:layout_marginStart="10dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:background="@drawable/round_coner"
            android:hint="@string/email_id"
            android:inputType="text"
            android:padding="14dp"
            android:textColor="@color/grey"
            android:textSize="16sp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:background="@drawable/round_coner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/Confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:background="@drawable/round_coner"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#1C9805"
            android:text="@string/sign_in"
            android:textSize="20sp"
            app:cornerRadius="10dp" />




    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/Form"
        android:layout_marginTop="10dp"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account" />

        <TextView
            android:id="@+id/Login_text_btn"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightblue"
            android:layout_marginStart="10dp"
            android:text="@string/login"
            android:textStyle="bold" />


    </LinearLayout>


</RelativeLayout>