<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".DiaryAdd">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="329dp"
        android:layout_height="427dp"

        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="63dp"
        android:alpha="1.0"
        android:background="@color/white"
        app:cardCornerRadius="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GrettingtextView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="419dp">

            <EditText
                android:id="@+id/TitleText"
                android:layout_width="268dp"
                android:layout_height="43dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="34dp"
                android:layout_marginBottom="1dp"
                android:background="@null"

                android:ems="10"
                android:hint="Title"
                android:inputType="text"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/ContentText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ContentText"
                android:layout_width="272dp"
                android:layout_height="271dp"
                android:layout_marginStart="34dp"
                android:layout_marginEnd="34dp"
                android:layout_marginBottom="32dp"
                android:background="@null"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/write_more_here"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TitleText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/GrettingtextView"
        android:layout_width="325dp"
        android:layout_height="56dp"

        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="478dp"
        android:fontFamily="@font/chewy"
        android:textColor="@color/white"
        android:textSize="30sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_btn"
        app:layout_constraintVertical_bias="0.329" />


    <TextView
        android:id="@+id/textSave"
        android:layout_width="56dp"
        android:layout_height="31dp"

        android:layout_marginTop="40dp"
android:textColor="@color/white"
        android:layout_marginEnd="52dp"
        android:background="@drawable/button_normal"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed"
        android:paddingStart="9dp"
        android:text="@string/save"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/imageClose"
        android:layout_width="34dp"
        android:layout_height="32dp"

        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/oval_resource"
        android:clickable="true"
        android:contentDescription="@string/close"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_close_24" />

    <ImageView
        android:id="@+id/delete_btn"
        android:layout_width="33dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/oval_resource"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_delete_24" />


</androidx.constraintlayout.widget.ConstraintLayout>
